<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/failed_connection_title"
        android:textColor="@color/highlight"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/failed_connection_description"
        android:textColor="@color/normal"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <com.dd.CircularProgressButton
        android:id="@+id/failed_connection_actionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:textColor="#FFF"
        app:cpb_cornerRadius="2dp"
        app:cpb_iconComplete="@mipmap/ic_action_done"
        app:cpb_iconError="@mipmap/ic_action_cancel"
        app:cpb_selectorIdle="@color/action"
        app:cpb_textIdle="@string/failed_connection_action"/>

</LinearLayout>